# PhenoFeatureFinder

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: draft-pdf.yml
docs/: Makefile  clean_metabolome.csv  conf.py  docstrings.rst  example.ipynb  index.md  index.rst  intro.md  intro.rst  make.bat  requirements.txt
documentation/manuals/: feature_selection_manual.ipynb  omics_data_filtering_manual.ipynb  phenotype_analysis_manual.ipynb
documentation/paper/: paper.bib  paper.md
example_data/: metabolome_example_data.csv  pilot_metabolome_data.csv
example_data/Wu2018_PMID_28866081/: README.md  phenotype_data_wu2017.csv
example_data/analyses_example_data/: caddisfly.ipynb  caddisfly_chemistry_feature_selection.ipynb  feature_filtering_water_chemistry.ipynb
example_data/caddisfly/: caddisfly_analysis.ipynb  caddisfly_data.csv  caddisfly_data_shorter.csv  caddisfly_data_shorter_y1.csv  caddisfly_data_shorter_y2.csv  caddisfly_test_data.csv  filetered_features_water_chemistry.csv  phenotypes_for_feature_selection.csv  (+12 more)
examples/: README.md
manuals/: README.md  feature_selection_manual.ipynb  metabolite_data_filtering_manual.ipynb  omics_data_filtering_manual.ipynb  phenotype_analysis_manual.ipynb
sample_datasets/: phenotypes_test_data_negative.csv
tests/: bioassay_test_data.csv  bioassay_to_phenotype.ipynb  clean_metabolome.csv  metabolome_test_data.csv  metabolome_test_data_filter_percentiles.csv  phenotypes_test_data.csv  test_discard_features_detected_in_blanks.py  test_phloemfinder.py  testing_classes.ipynb
(+33 files in other folders)
