[tool.poetry]
name = "phloemfinder"
version = "0.1.0"
description = "Find plant metabolites related to whitefly pest resistance"
authors = ["Marc Galland"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
seaborn = ">=0.12.1"
pandas = ">=1.5.1"
scikit-learn = ">=0.24.1"
auto-sklearn = ">=0.15.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"
 
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
